@@ -212,7 +212,7 @@
       </control>
       <!--OUTSIDETEMP-->
       <control type="group">
-        <visible>!IsEmpty(Window(10000).Property(IBUSCOMMUNICATOR_OBC_OUTTEMP))</visible>
+        <visible>!IsEmpty(Window(10000).Property(IBUS_OBC_TEMP))</visible>
         <animation effect="slide" start="0,0" end="-90,0" delay="0" time="300" condition="Player.Muted">conditional</animation>
         <animation effect="slide" start="490,0" end="0,0" delay="0" time="200">VisibleChange</animation>
         <animation effect="slide" start="0,0" end="460,0" delay="0" time="400">WindowClose</animation>
@@ -236,7 +236,7 @@
           <font>font38_title</font>
           <textcolor>$VAR[TextColor1]</textcolor>
           <shadowcolor>black</shadowcolor>
-          <label>$INFO[Window(10000).Property(IBUSCOMMUNICATOR_OBC_OUTTEMP)]</label>
+          <label>$INFO[Window(10000).Property(IBUS_OBC_TEMP)]</label>
         </control>
       </control>
       <!--Clock-->
